[package]
name = "tiny-mp-cache"
version = "0.1.1"
edition = "2021"
authors = ["Nikita Ilin <nv.ilyn@gmail.com>"]
description = "Tiny multiprocessing-friendly cache over TCP, exposed to Python via PyO3"
license = "MIT"

[lib]
name = "tiny_mp_cache"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
dashmap = "5.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
